--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		</div>
 		<div class="nav">
 			<ul>
-				<li><a href="#news">ニュース</a></li>
+				<li><a href="#news" class="first">ニュース</a></li>
 				<li><a href="#product-intro">製品紹介</a></li>
 				<li><a href="#usecase">ユースケース</a></li>
 				<li><a href="#delivery-rec">納入実績</a></li>
@@ -513,7 +513,7 @@
 		<div class="footer-navbar">
 			<div class="nav">
 				<ul>
-					<li><a href="#news">ニュース</a></li>
+					<li><a href="#news" class="first">ニュース</a></li>
 					<li><a href="#product-intro">製品紹介</a></li>
 					<li><a href="#usecase">ユースケース</a></li>
 					<li><a href="#delivery-rec">納入実績</a></li>
@@ -524,6 +524,13 @@
 			</div>
 			<div class="language-change">JP / EN</div>
 		</div>
+		<div class="social-icons">
+			<img class="facebook" alt="Facebook Logo Image" src="assets/images/facbook.png">
+			<img class="twitter" alt="Twitter Logo Image" src="assets/images/twitter.png">
+			<img class="linkedin" alt="Linkedin Logo Image" src="assets/images/linkedin.png">
+		</div>
+		<div class="privacy"><a href="">個人情報保護方針</a></div>
+		<div class="copyright">Copyright © 2023 Orb Inc. All rights reserved.</div>
 	</div>
 <!--Header section end-->
 </body>
